# 42_push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  commands.txt  text.txt
.github/workflows/: run-norminette.yml  run-tests.yml
includes/: push_swap.h
libft/: Makefile  ft_atol.c  ft_split.c  libft.h  stqJSR75
srcs/: fill_stack.c  fill_stacks.c  indexing.c  main.c  pa.c  pb.c  push_operations.c  push_swap.c  ra.c  rb.c  rev_rotate_operations.c  rotate_operations.c  rr.c  rra.c  rrb.c  rrr.c  sa.c  sb.c  sort_numbers_utils.c  sort_operations.c  sort_operations_utils.c  sort_operations_utils_2.c  sort_rest_numbers_utils.c  ss.c  start_stacks.c  swap_operations.c
tests/: test_indexing.cpp  test_indexing.h  test_push_operations.cpp  test_push_operations.h  test_rev_rotate_operations.cpp  test_rotate_operations.cpp  test_sort_numbers_utils.cpp  test_sort_operations.cpp  test_sort_operations_utils.cpp  test_sort_operations_utils_2.cpp  test_start_stacks.cpp  test_swap_operations.cpp
